DAT-16: Improve the hierarchy view

--- a/views/hierarchy.html
+++ b/views/hierarchy.html
@@ -2,10 +2,12 @@
   <h1>DHIS2 OrgUnit App</h1>
 </md-toolbar>
 
-<md-card flex="25">
+<md-content>
   <h1 class="silly">OrgUnit Hierarchy</h1>
+  <p>Choose a position in the hierarchy for the new site:</p>
 
   <org-unit-hierarchy org-unit="root" selected="selectDst"></org-unit-hierarchy>
 
-  <div>You have selected {{selectDst.selected.displayName}}</div>
-</md-card>
+  <p>You have selected <strong>{{selectDst.selected.displayName}}</strong></p>
+  <md-button ng-disabled="!selectDst.selected">Next</md-button>
+</md-content>
