DAT-16: Hierarchy - added flex and layout-padding

--- a/views/hierarchy.html
+++ b/views/hierarchy.html
@@ -2,11 +2,11 @@
   <h1>DHIS2 OrgUnit App</h1>
 </md-toolbar>
 
-<md-content>
+<md-content flex layout-padding>
   <h1 class="silly">OrgUnit Hierarchy</h1>
   <p>Choose a position in the hierarchy for the new site:</p>
 
-  <org-unit-hierarchy org-unit="root" selected="selectDst"></org-unit-hierarchy>
+  <org-unit-hierarchy org-unit="root" selected="selectDst" flex layout-padding></org-unit-hierarchy>
 
   <p>You have selected <strong>{{selectDst.selected.displayName}}</strong></p>
   <md-button ng-disabled="!selectDst.selected">Next</md-button>
