--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,13 @@
 .silly {
   color: red;
 }
+
+/* Reset borders due to overzealous css in dhis2 */
+.reset-border {
+  border-width: 0 0 1px 0 !important;
+  border-color: rgba(0,0,0,0.12) !important;
+}
+.reset-border:focus {
+  border-width: 0 0 2px 0 !important;
+  border-color: rgba(16,108,200,1) !important;
+}
