--- a/views/add-site.html
+++ b/views/add-site.html
@@ -6,11 +6,11 @@
   <h2>Details</h2>
   <md-input-container>
     <label>Name</label>
-    <input class="reset-border" type="text" ng-model="orgunit.name">
+    <input class="reset-border" type="text" ng-model="orgunit.name" required>
   </md-input-container>
   <md-input-container>
     <label>Short name</label>
-    <input class="reset-border" type="text" ng-model="orgunit.shortName">
+    <input class="reset-border" type="text" ng-model="orgunit.shortName" required>
   </md-input-container>
   <md-input-container>
     <label>Description</label>
@@ -22,8 +22,9 @@
   </md-input-container>
   <div layout="row" layout-align="left center">
     <label>Opening date</label>
-    <md-datepicker ng-model="orgunit.openingDate"></md-datepicker>
+    <md-datepicker ng-model="orgunit.openingDate" required></md-datepicker>
   </div>
+  <span class="error" ng-show="!orgunit.openingDate">Opening date is required</span>
   <md-input-container>
     <label>Comment</label>
     <input class="reset-border" type="text" ng-model="orgunit.comment">
@@ -58,5 +59,5 @@
   </md-input-container>
 </md-card>
 <div layout="row">
-  <md-button class="md-primary md-raised" ng-click="next(orgunit)">Next</md-button>
+  <md-button class="md-primary md-raised" ng-click="next(orgunit)" ng-disabled="!(orgunit.name &amp;&amp; orgunit.shortName &amp;&amp; orgunit.openingDate)">Next</md-button>
 </div>
