--- a/views/partials/org-unit-hierarchy.html
+++ b/views/partials/org-unit-hierarchy.html
@@ -2,11 +2,11 @@
   <div ng-if="!orgUnit"></div>
   <div ng-if="orgUnit">
     <div ng-click="selectOrgUnit(orgUnit)">
-      <i ng-if="orgUnit.children && orgUnit.children.length > 0 && orgUnit.collapse" class="fa fa-angle-right" aria-hidden="true"></i>
-      <i ng-if="orgUnit.children && orgUnit.children.length > 0 && !orgUnit.collapse" class="fa fa-angle-down" aria-hidden="true"></i>
+      <i ng-if="orgUnit.children &amp;&amp; orgUnit.children.length > 0 &amp;&amp; orgUnit.collapse" class="fa fa-angle-right" aria-hidden="true"></i>
+      <i ng-if="orgUnit.children &amp;&amp; orgUnit.children.length > 0 &amp;&amp; !orgUnit.collapse" class="fa fa-angle-down" aria-hidden="true"></i>
       {{orgUnit.name}}
     </div>
-    
+
     <md-list ng-if="!orgUnit.collapse">
       <md-list-item ng-repeat="child in orgUnit.children">
         <org-unit-hierarchy-nested org-unit="child" selected="selected"></org-unit-hierarchy-nested>
